--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,15 @@ body {
     background-size: 100vw 400vh;
 
     animation: changeBack 5s ease infinite alternate;
-    margin: 0;
+  /*   margin: 0px;
+    padding: 0px;
+    border: 0px; */
 }
+/* main {
+    margin: 0px;
+    padding: 0px;
+    border: 0px;
+} */
 
 p {
     color: black;
@@ -31,10 +38,22 @@ fieldset {
 }
 
 #title {
-    border: 0;
-    padding: 0;
+    margin: 0px;
+    border: 0px;
+    padding: 0px;
     text-align: center;
-    width: 100vw;
-    height: 500px;
-    background-color: aliceblue;
+    width: 100%;
+    height: 200px;
+}
+h2 {
+    margin: 0px;
+    border: 0px;
+    padding: 0px;
+}
+
+
+#text-area {
+    margin: auto;
+    width: 500px;
+    height: 600px;
 }
