--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ body {
     background-size: 100vw 400vh;
 
     animation: changeBack 5s ease infinite alternate;
+    
   /*   margin: 0px;
     padding: 0px;
     border: 0px; */
@@ -56,4 +57,15 @@ h2 {
     margin: auto;
     width: 500px;
     height: 600px;
+}
+
+#error-message {
+    text-align: center;
+    padding: 50px;
+    color: azure;
+    display: none;
+    /* width: 100%;
+    height: 100vw; */
+    /* background-image: url("motoqueiro_fantasma.webp");
+    background-repeat: no-repeat; */
 }
