--- a/styles.css
+++ b/styles.css
@@ -9,15 +9,30 @@
 }
 
 body {
-    background: linear-gradient(aquamarine, rgb(255, 150, 0));
+    /* background: linear-gradient(aquamarine, rgb(255, 150, 0));
     background-size: 100vw 400vh;
 
-    animation: changeBack 5s ease infinite alternate;
-    
-  /*   margin: 0px;
+    animation: changeBack 5s ease infinite alternate; */
+
+    font-size: 16px;
+    font-family: 'Playfair Display', serif;
+    box-sizing: border-box;
+
+    padding: 20px;
+
+    /*   margin: 0px;
     padding: 0px;
     border: 0px; */
 }
+
+input {
+    border-radius: 5px;
+    border: none;
+    background: rgb(0, 0, 0, 0.1);
+    padding: 2px 5px;
+    margin: 0px 0px 0px 2px;
+}
+
 /* main {
     margin: 0px;
     padding: 0px;
@@ -31,32 +46,118 @@ p {
 fieldset {
     border: 1px solid black;
     border-radius: 20px;
-    padding: 10px;
+    padding: 20px 22px;
 }
 
 .horarios_semana {
     display: none;
+    margin: 0px 0px 10px 0px;
 }
 
+
 #title {
-    margin: 0px;
+    margin: 0px 0px 20px 0px;
     border: 0px;
     padding: 0px;
     text-align: center;
     width: 100%;
-    height: 200px;
 }
+
 h2 {
-    margin: 0px;
+    margin: 0px 0px 15px 0px;
     border: 0px;
     padding: 0px;
+
+    font-size: 26px;
+    font-weight: 600;
 }
 
+h3 {
+    font-weight: 600;
+    margin: 0px 0px 15px 0px;
+}
+
+.descrição {
+    margin: 0px
+}
+
+.datas {
+    display: flex;
+    flex-direction: row;
+    margin: 0px 0px 10px 0px;
+}
+
+.datasA {
+    margin: 0px 0px 0px 5px;
+}
+
+.inputData {
+    border-radius: 5px;
+    border: none;
+    background: rgb(0, 0, 0, 0.1);
+    padding: 2px 5px;
+    margin: 0px 0px 0px 2px;
+}
+
+.inputData:focus-visible {
+    outline: none;
+}
+
+.instruções {
+    margin: 0px 0px 10px 0px;
+}
+
+.dias {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.dia {
+    box-sizing: border-box;
+
+    padding: 10px;
+    border: 1px solid rgb(0, 0, 0);
+    border-radius: 5px;
+    width: 30%;
+    height: 250px;
+
+    margin: 0px 0px 10px 0px;
+}
+
+.quantidade {
+    margin: 0px 0px 10px 0px;
+}
+
+.gerar {
+    padding: 10px;
+    margin: 10px 0px;
+    border-radius: 10px;
+    background: rgb(0, 0, 0, 0.1);
+
+    transition: box-shadow 0.2s linear;
+}
+
+.gerar:hover {
+    box-shadow: 0px 0px 3px 1px rgb(0, 0, 0);
+}
+
+.text {
+    box-sizing: border-box;
+    width: 500px;
+    height: 400px;
+    padding: 0px 0px 400px 0px;
+}
 
 #text-area {
-    margin: auto;
-    width: 500px;
-    height: 600px;
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+
+    overflow: scroll;
+
+    border-radius: 10px;
 }
 
 #error-message {
