--- a/styles.css
+++ b/styles.css
@@ -121,7 +121,9 @@ h3 {
     border: 1px solid rgb(0, 0, 0);
     border-radius: 5px;
     width: 30%;
-    height: 250px;
+    /* height: 250px; */
+    min-height: 260px;
+    height: auto;
 
     margin: 0px 0px 10px 0px;
 }
@@ -165,8 +167,30 @@ h3 {
     padding: 50px;
     color: azure;
     display: none;
-    /* width: 100%;
-    height: 100vw; */
-    /* background-image: url("motoqueiro_fantasma.webp");
-    background-repeat: no-repeat; */
+}
+
+
+
+@media(max-width: 1100px) {
+
+    .dia {
+        width: 48%;
+    }
+
+    .datas {
+        display: block;
+    }
+
+}
+
+@media(max-width: 576px) {
+
+    .dia {
+        width: 100%;
+    }
+
+    .datas {
+        display: block;
+    }
+
 }
