--- a/styles.css
+++ b/styles.css
@@ -141,6 +141,7 @@ h3 {
     transition: box-shadow 0.2s linear;
 }
 
+
 .gerar:hover {
     box-shadow: 0px 0px 3px 1px rgb(0, 0, 0);
 }
@@ -154,6 +155,7 @@ h3 {
 
 #text-area {
     width: 100%;
+    min-height: 100px;
     height: 100%;
     padding: 10px;
 
